# algorithmic-trading

./: .gitignore  .gitmodules  BOOKS.md  IDEAS.md  LINKS.md  NOTES.md  README.md  pyproject.toml
HipsterAsparagusDolphin/: simpleMeanRevertingPairsPart2.py
algotradingtest/: README.md
algotradingtest/algotradingtest/ahmadBazzi/: 6.ipynb  6b.ipynb  README.md  fertilizer-nickel.ipynb  fertilizerAndNickelStocks.py  ford_stock.csv  general_motors_stock.csv  stockLib.py  tesla_stock.csv
algotradingtest/algotradingtest/backtesting-sample/: Algorithmic Trading - Backtesting a strategy in python.ipynb
algotradingtest/algotradingtest/ibapiTest/: README.md  test_ibapi.py
algotradingtest/algotradingtest/quanttradertest/: README.md  config_live.yaml
algotradingtest/algotradingtest/stocks-simple/: MSFT-sample.xlsx  downloadDatShit.py  downloadSimple.py
scratch/: README.md  pyproject.toml
scratch/scratch/: backtesting_test.py  backtesting_test2.ipynb
scratch/scratch/.ipynb_checkpoints/: backtesting_test-checkpoint.py
scratch/scratch/Algorithmic-Trading-Backtesting-python-example-main/: backtesting-but-lotsofstocks.ipynb
scratch/tests/: test_scratch.py
someProject/: simpleMeanRevertingPairsPart2.py  simpleMeanRevertingPairsWithDifferentStocks.py
src/EasyLanguage/: CC - Macro Consolidated Interval Display (MCID).easylanguage
src/WealthLab/: IdkStrategy.xml  meanRevertingPairs.xml  meanRevertingPairsCSHARP.xml
src/algotradingtest/: pyproject.toml
src/algotradingtest/ahmadBazzi/: 6a.ipynb  ford_stock.csv  (+1 more)
work/quant-trading-ernest-p-chan/: README.md
(+21 files in other folders)
